# open_quadtree_mapping

./: CMakeLists.txt  CMakeLists_old.txt  install.md
docker/: Dockerfile  tum_rgbd.launch
include/quadmap/: bpextract.cuh  depth_extract.cuh  depth_fusion.cuh  depth_upsample.cuh  depthmap.h  depthmap_node.h  device_image.cuh  frameelement.cuh  lsd_semidense.cuh  match_parameter.cuh  pixel_cost.cuh  publisher.h  quadtree.cuh  seed_init.cuh  seed_matrix.cuh  stereo_parameter.cuh  texture_memory.cuh
launch/: carla.launch  carla_highres.launch  carla_highres_voxblox.launch  example.launch  kitti.launch  kitti2.launch
python/: test_kitti.py
src/: bpextract.cu  depth_extract.cu  depth_fusion.cu  depth_upsample.cu  depthmap.cpp  depthmap_node.cpp  lsd_semidense.cu  main_ros.cpp  main_ros_transform_msg_sub.cpp  main_standalone.cpp  publisher.cpp  python_wrapper.cpp  quadtree.cu  seed_init.cu  seed_matrix.cu
